--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
    <meta charset="utf-8">
    <title>Тег LINK</title>  
-   <link rel="stylesheet" href="ie.css">
+   <link rel="stylesheet" href="style;.css">
 </head> 
 <body>
 <header>
